--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 
+
 /* slider */
 #slider {width: 1120px; height: 400px; margin: 0 auto;}
    .swiper {
@@ -12,9 +13,6 @@
       text-align: center;
       font-size: 17px;
       background: #444;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     .swiper-slide img {
@@ -27,7 +25,7 @@
 
     .section {
       width: 1120px;
-      height: 415px;
+      height: 500px;
       margin: 0 auto;
       background: #ffffff; 
       overflow: hidden;  
@@ -51,6 +49,7 @@
       justify-content: center;
       align-items: center;
     }
+    .section img {width: 100px; height: 150px; margin-right: auto;}
 
 
     .section2 {
@@ -72,16 +71,14 @@
       background: #444;
       color: #fff;
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
+    .section2 img {margin: 0 auto; width: 180px; height: 270px;}
 
 
    
     .section3 {
       width: 1120px;
-      height: 415px;
+      height: 500px;
       margin: 0 auto;
       background: #ffffff; 
       overflow: hidden;  
@@ -105,6 +102,8 @@
       justify-content: center;
       align-items: center;
     }
+    .section3 img {width: 100px; height: 150px; margin-right: auto;}
+
  
 
     .section4 {
@@ -126,10 +125,8 @@
       background: #444;
       color: #fff;
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
+    .section4 img {margin: 0 auto; width: 180px; height: 270px;}
 
 
 
@@ -152,10 +149,8 @@
       background: #444;
       color: #fff;
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
+     .section5 img {margin: 0 auto; width: 180px; height: 270px;}
 
 
     .section6 {
@@ -181,4 +176,44 @@
       justify-content: center;
       align-items: center;
     }
+
+
+    .section2 {
+      width: 1120px;
+      height: 320px;   /* 원하는 고정 높이 */
+      margin: 0 auto;
+      background: #ffffff; /* 확인용 */
+      overflow: hidden;
+    }
+
+    .section7 .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .section7 .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #444;
+      color: #fff;
+
+    }
+    .section7 img {margin: 0 auto; width: 180px; height: 270px;}
+
+
+
+
+    .section8 .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .section8 .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #444;
+      color: #fff;
+
+    }
+    .section8 img {margin: 0 auto; width: 180px; height: 270px;}
 
