--- a/css/index.css
+++ b/css/index.css
@@ -423,6 +423,43 @@
   font-size: 0.85rem;
   color: #555;
 }
+.custom-prev-3,
+.custom-next-3 {
+  position: absolute;
+  top: 47%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 40px;
+  color: rgb(64, 64, 64);
+  cursor: pointer;
+  z-index: 9999; 
+}
+
+.custom-prev-3 { left: -20px; }
+.custom-next-3 { right: -20px; }
+
+.custom-prev-3 span,
+.custom-next-3 span {
+  display: inline-block;
+  transform: translateY(-1px);
+  user-select: none;       
+  transition: color 0.2s ease;
+}
+
+.custom-prev-3:hover span,
+.custom-next-3:hover span {
+  color: rgb(207, 207, 207);
+}
+
 
 
 
@@ -535,6 +572,43 @@
   font-size: 13px;
   color: #555;
 }
+.custom-prev-4,
+.custom-next-4 {
+  position: absolute;
+  top: 36%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 40px;
+  color: rgb(64, 64, 64);
+  cursor: pointer;
+  z-index: 9999; 
+}
+
+.custom-prev-4 { left: -20px; }
+.custom-next-4 { right: -20px; }
+
+.custom-prev-4 span,
+.custom-next-4 span {
+  display: inline-block;
+  transform: translateY(-1px);
+  user-select: none;       
+  transition: color 0.2s ease;
+}
+
+.custom-prev-4:hover span,
+.custom-next-4:hover span {
+  color: rgb(207, 207, 207);
+}
+
 
 
 
