--- a/css/sub3.css
+++ b/css/sub3.css
@@ -1,3 +1,20 @@
-.box {width: 707px; height: 8700px; margin: 0 auto; font-size: 18px; margin-top: 70px;}
+header {display: flex; justify-content: center; align-items: center; height: 10px; margin-top: 15px;background-color: #fff; }
 
-hr{margin-top: 15px; border-top: 1px solid #d3d3d3;}
+header img {width: 35px; height: 40px;}
+
+.box {width: 707px; margin: 70px auto 0; font-size: 18px; line-height: 1.6;color: #3d3d3d;}
+ol {list-style-position: inside;padding-left: 0;margin-left: 0;}
+
+ol li {margin-bottom: 5px;text-indent: -1.2em;padding-left: 1.2em;line-height: 1.6;}
+ul {padding-left: 0; margin: 10px 0;}
+ul li {margin-bottom: 5px; }
+ul li::marker {font-size: 10px; color: #333;}
+ul li a {color: #507ee9; font-size: 17px;}
+
+
+hr{margin-top: 15px; border-top: 1px solid #e1e1e1;}
+
+footer {display: flex; justify-content: center; align-items: center; }
+
+a {color: #00c8ff;}
+
